RESOLVED FIXED81454
Crash in WebCore::Range::startPosition() when dismissing the Press and Hold panel by clicking in the menu bar
https://bugs.webkit.org/show_bug.cgi?id=81454
Summary Crash in WebCore::Range::startPosition() when dismissing the Press and Hold p...
mitz
Reported 2012-03-17 12:07:35 PDT
Crash in WebCore::Range::startPosition() when dismissing the Press and Hold panel by clicking in the menu bar
Attachments
Add a null check in WebPage::insertText() (2.10 KB, patch)
2012-03-17 12:14 PDT, mitz
adachan: review+
mitz
Comment 1 2012-03-17 12:12:44 PDT
mitz
Comment 2 2012-03-17 12:14:24 PDT
Created attachment 132466 [details] Add a null check in WebPage::insertText()
mitz
Comment 3 2012-03-17 12:24:09 PDT
Note You need to log in before you can comment on or make changes to this bug.